# Practicas

./: Diagrama_CU_Corregido.vpp  Diagrama_CU_Corregido.vpp~20  Diagrama_CU_Corregido.vpp~21  Requisitos.txt  cu007.md
00Repaso/: Pract1_SO.c  Pract2_SO.c  a.out  abanico.c  estructuras.c  lineal.c
ALG/Practica1/: ClaseTiempo.cpp  ejemplo_gnuplot.sh  p1.cpp  sistemaEcuaciones.cpp  tiempos.txt
ED/Practica-1-usuario/: Monomio.cpp  Monomio.hpp
ED/Practica1/: Monomio.cpp  Monomio.hpp  Monomio.hpp.gch  funcionesAuxiliares.cpp  operadoresExternosMonomios.cpp  operadoresExternosMonomios.hpp
ED/Practica2/: Doxyfile  Monomio.cpp  Monomio.hpp  Polinomio.cpp  Polinomio.hpp  PolinomioInterfaz.hpp  funcionesAuxiliares.cpp  macros.hpp  operadoresExternosMonomios.cpp
ED/Practica3/: Makefile  arbolbinarioordenado.hpp  arbolbinarioordenadoenlazado.hpp  main.cpp
ED/Practica4/: algoritmosgrafos.hpp  funciones.hpp  grafo.hpp  main.cpp
Is/: Diagrama_CU_Corregido.vpp
Is/Correcciones/: Diagrama_CU_Corregido.vpp~1  GuardarCargarIdentificarAñadir.cpp  GuardarCargarIdentificarAñadir.hpp
Is/Diagramas/: DiagramaSecuenciaCargarCopia.vpp  DiagramaSecuenciaCargarCopia.vpp.bak_000f  DiagramaSecuenciaCargarCopia.vpp~4  DiagramaSecuenciaCargarCopia.vpp~5  DiagramaSecuenciaGuardarCopia.vpp  DiagramaSecuenciaGuardarCopia.vpp.bak_000f  DiagramaSecuenciaGuardarCopia.vpp.bak_001d  DiagramaSecuenciaGuardarCopia.vpp~1  DiagramaSecuenciaGuardarCopia.vpp~2  (+1 more)
PAS/: Software_Redes.txt
POO/: POO_Practica1.rar
Vision/: comandosPythonGraciosos.txt  ejemplo.cc
Vision/p2/: CMakeLists.txt  pract2.cc
(+542 files in other folders)
